tests/snapshots/engine__stl004_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "STL004",
    "message": "This version has no lasting constraint or historical context.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 25
    },
    "end_location": {
      "row": 4,
      "column": 30
    },
    "byte_range": {
      "start": 44,
      "end": 49
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v0.1.0/docs/rules/STL004.md",
    "related": [],
    "suggestion": "State the supported version range, or link to the manifest or release record that owns the version."
  }
]
