tests/snapshots/engine__sup002_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "SUP002",
    "message": "Suppression for LNK001 did not suppress any diagnostic.",
    "filename": "docs/guide.md",
    "location": {
      "row": 1,
      "column": 1
    },
    "end_location": {
      "row": 1,
      "column": 79
    },
    "byte_range": {
      "start": 0,
      "end": 78
    },
    "fix": {
      "message": "Remove unused suppression codes.",
      "applicability": "safe",
      "edits": [
        {
          "byte_range": {
            "start": 0,
            "end": 79
          },
          "content": ""
        }
      ]
    },
    "url": "https://github.com/scarletkc/seiso/blob/v0.1.0/docs/rules/SUP002.md",
    "related": [],
    "suggestion": "Remove LNK001 from the declaration, or remove the comment if it lists no other rules."
  }
]
