tests/snapshots/engine__vox001_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "VOX001",
    "message": "This phrase refers to the requester of an earlier conversation.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 1
    },
    "end_location": {
      "row": 4,
      "column": 17
    },
    "byte_range": {
      "start": 20,
      "end": 36
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v0.1.0/docs/rules/VOX001.md",
    "related": [],
    "suggestion": "State the document's instructions or facts directly for its readers."
  }
]
